--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <button onclick="displayHash()">Hash</button>
     <p>Nilai hash:</p>
     <div id="output"></div>
- 
+ <script src="script.js"></script>
 </body>
 </html>
