--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Hash Program</title>
-</head>
-<body>
-   <label for="input">Masukkan string:</label>
-    <input type="text" id="input">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Hash Program</title>
+  </head>
+  <body>
+    <label for="input">Masukkan string:</label>
+    <input type="text" id="input" />
     <button onclick="displayHash()">Hash</button>
     <p>Nilai hash:</p>
     <div id="output"></div>
- <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
